# WireDock

./: Cargo.toml  README.md
src/: main.rs
src/domain/: command.rs  endpoint.rs  error.rs  event.rs  hex.rs  id.rs  io.rs  logger.rs  mod.rs  registry.rs  state.rs  transport.rs
src/infra/: connector.rs  error.rs  fs_cleanup.rs  listener.rs  logger.rs  mod.rs  peercred.rs
src/repl/: args.rs  display.rs  error.rs  input.rs  mod.rs  parser.rs  runtime.rs
